[project]
name = "profiling-question-retrieval"
version = "0.1.0"
description = "RAG-based retrieval and reranking service for survey profiling questions, built with FastAPI."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "chromadb>=1.5.5",
    "openai>=2.30.0",
    "sentence-transformers>=5.3.0",
]
[tool.setuptools.packages.find]
include = ["app*"]
